compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__anonymous_function_with_multiple_args.snap
---
source: compiler-core/src/go/tests/functions.rs
assertion_line: 186
expression: "\npub fn go() -> Int {\n  let add = fn(a: Int, b: Int) -> Int { a + b }\n  add(3, 4)\n}\n"
---
----- SOURCE CODE

pub fn go() -> Int {
  let add = fn(a: Int, b: Int) -> Int { a + b }
  add(3, 4)
}


----- COMPILED GO
package thepackage

func Go() int64 {
  add := func(a int64, b int64) int64 {
    return (a + b)
  }
  _ = add
  return add(int64(3), int64(4))
}
