compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__closure_captures_outer_variable.snap
---
source: compiler-core/src/go/tests/functions.rs
assertion_line: 198
expression: "\npub fn go() -> Int {\n  let n = 10\n  let add_n = fn(x: Int) -> Int { x + n }\n  add_n(5)\n}\n"
---
----- SOURCE CODE

pub fn go() -> Int {
  let n = 10
  let add_n = fn(x: Int) -> Int { x + n }
  add_n(5)
}


----- COMPILED GO
package thepackage

func Go() int64 {
  n := int64(10)
  _ = n
  add_n := func(x int64) int64 {
    return (x + n)
  }
  _ = add_n
  return add_n(int64(5))
}
