compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__function_returning_nil.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\npub fn noop() -> Nil {\n  Nil\n}\n"
---
----- SOURCE CODE

pub fn noop() -> Nil {
  Nil
}


----- COMPILED GO
package thepackage

func Noop() struct{} {
  return struct{}{}
}
