compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__function_with_args.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "\npub fn add(a: Int, b: Int) -> Int {\n  a + b\n}\n"
---
----- SOURCE CODE

pub fn add(a: Int, b: Int) -> Int {
  a + b
}


----- COMPILED GO
package thepackage

func Add(a int64, b int64) int64 {
  return (a + b)
}
